--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -22851,6 +22851,13 @@
 "~^/docs/genetics/selection/1951-hall.dj.*$" "/docs/genetics/selection/1951-hall.pdf";
 "~^/docs/genetics/heritable/1966-he$" "/docs/genetics/heritable/1966-heston.pdf";
 "~^/docs/genetics/heritable/1962-mcclearn.dj.*$" "/docs/genetics/heritable/1962-mcclearn.pdf";
+"~^/docs/iq/2002-firkowska$" "/docs/iq/2002-firkowskamankiewicz.pdf";
+"~^/docs/iq/2002-firkowska--mankiewicz.pdf" "/docs/iq/2002-firkowskamankiewicz.pdf";
+"~^/Modafin$" "/Modafinil";
+"~^/docs/technology/2008-sower.pdfIt.*$" "/docs/technology/2008-sower.pdf";
+"~^/docs/ai/index/2021-jouppi.pdf.*$" "/docs/ai/2021-jouppi.pdf";
+"~^/Design-graveyard/.*$" "/Design-graveyard";
+"~^/CO2-C-oin.*$" "/CO2-Coin";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*/GET$" "/static/404";
