--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -22858,8 +22858,15 @@
 "~^/docs/ai/index/2021-jouppi.pdf.*$" "/docs/ai/2021-jouppi.pdf";
 "~^/Design-graveyard/.*$" "/Design-graveyard";
 "~^/CO2-C-oin.*$" "/CO2-Coin";
+"~^/About-vim.*$" "/About";
+"~^/docs/genetics/heritable/adoption/favicon.ico.*$" "/static/img/favicon.ico";
+"~^/static/build/.htaccess.*$" "/static/404";
+"~^/feed:https://www.links.org/?feed=comments-rss2.*$" "https://feeds.feedburner.com/links/ZvUZ";
+"~^/docs/www/www.justice.gov/917278af2c65395879bcb9c6a1b59375ed7a3d2b.htmlhttps://www.gwern.net/docs/silk-road/2015-01-29-jasencrisp-defensesentencingletter.pdf.*$" "/docs/silk-road/2015-01-29-jasencrisp-defensesentencingletter.pdf";
+"~^/docs/[a-km-z]/Scanners$" "/Scanners";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
+"~^.*aspx.*$" "/static/404";
 "~^.*/GET$" "/static/404";
 "~^.*/POST$" "/static/404";
 "~^.*/PUT$" "/static/404";
@@ -22971,7 +22978,6 @@
 "~^/.*robots.txt.php.*$" "/static/404";
 "~^/.*root.php.*$" "/static/404";
 "~^/.*seoul-massage.com%2F.*$.*$" "/static/404";
-"~^/.*telerik.web.ui.dialoghandler.aspx.*$" "/static/404";
 "~^/.*upload.php.*$" "/static/404";
 "~^/.*user/login.*$" "/static/404";
 "~^/.*vb.sql.*$" "/static/404";
@@ -23036,11 +23042,9 @@
 "~^//Controls/.*$" "/static/404";
 "~^//Desktop.*$" "/static/404";
 "~^//GponForm/.*$" "/static/404";
-"~^//GuidBuyList.aspx.*$" "/static/404";
 "~^//Login.jsp.*$" "/static/404";
 "~^//LoginForm.jsp.*$" "/static/404";
 "~^//Plugin/.*$" "/static/404";
-"~^//ProductDetail.aspx.*$" "/static/404";
 "~^//ProductListCategory.html.*$" "/static/404";
 "~^//Scripts/ueditor/.*$" "/static/404";
 "~^//ShoppingCart1.html.*$" "/static/404";
@@ -23401,7 +23405,6 @@
 "~^/FTPSHELL.php.*$" "/static/404";
 "~^/FedEx.*$" "/static/404";
 "~^/File-Upload/.*$" "/static/404";
-"~^/FilePermissions.aspx.*$" "/static/404";
 "~^/Fisting-.*$" "/static/404";
 "~^/Flights-.*$" "/static/404";
 "~^/Fonts/CHANGELOG.txt.*$" "/static/404";
@@ -23463,7 +23466,6 @@
 "~^/Jquery/.*$" "/static/404";
 "~^/K6S8okp3/.*$" "/static/404";
 "~^/KAdot.php.*$" "/static/404";
-"~^/KWioIzdW2u0K.aspx.*$" "/static/404";
 "~^/L3b.php.*$" "/index";
 "~^/L7rRqcNQwKU.php.*$" "/static/404";
 "~^/Laravel-E2N-test/.*$" "/static/404";
@@ -23486,7 +23488,6 @@
 "~^/Marvins.php.*$" "/static/404";
 "~^/Mature-.*$" "/static/404";
 "~^/Max_T._O.*$" "/static/404";
-"~^/Members/Login.aspx.*$" "/static/404";
 "~^/Messaging.Link.*$" "/static/404";
 "~^/Milf-.*$" "/static/404";
 "~^/Msd/.*$" "/static/404";
@@ -23623,8 +23624,6 @@
 "~^/UI\/$" "/static/404";
 "~^/UngooaTsxnIj.*$" "/static/404";
 "~^/UploadAdpic.*$" "/static/404";
-"~^/Upload_file.aspx.*$" "/static/404";
-"~^/Uploader.aspx.*$" "/static/404";
 "~^/Uploader.php.*$" "/static/404";
 "~^/UserFiles/.*$" "/static/404";
 "~^/UserLogin//.*$" "/static/404";
@@ -23856,7 +23855,6 @@
 "~^/adm/.*$" "/static/404";
 "~^/admin.*$" "/static/404";
 "~^/admin.*$" "/static/404";
-"~^/admin.aspx.*$" "/static/404";
 "~^/admin.cfm.*$" "/static/404";
 "~^/admin.cgi.*$" "/static/404";
 "~^/admin.html.*$" "/static/404";
@@ -23939,7 +23937,6 @@
 "~^/artist/.*$" "/static/404";
 "~^/artists/.*$" "/static/404";
 "~^/asdasdas.*$" "/static/404";
-"~^/asp.aspx.*$" "/static/404";
 "~^/aspcms/.*$" "/static/404";
 "~^/asrsp.txt.*$" "/static/404";
 "~^/assets.fastcompany.com/.*$" "/static/404";
@@ -24359,7 +24356,6 @@
 "~^/dedecms/.*$" "/static/404";
 "~^/defau11.php.*$" "/static/404";
 "~^/defau1t.php.*$" "/static/404";
-"~^/default.aspx.*$" "/static/404";
 "~^/default.bck.*$" "/static/404";
 "~^/default.bz2.*$" "/static/404";
 "~^/default.cfm.*$" "/static/404";
@@ -25635,8 +25631,6 @@
 "~^/ln.ameba.jp.*$" "/static/404";
 "~^/lob-front-cover-vs.jpg.*$" "/static/404";
 "~^/localservices/.*$" "/static/404";
-"~^/localstart.aspx.*$" "/static/404";
-"~^/localstart.aspx.*$" "/static/404";
 "~^/localstart.jsa.*$" "/static/404";
 "~^/localstart.jsa.*$" "/static/404";
 "~^/localstart.jsp.*$" "/static/404";
@@ -25685,8 +25679,6 @@
 "~^/mailchimp/.*$" "/static/404";
 "~^/maildelivery/.*$" "/static/404";
 "~^/mailer.*$" "/static/404";
-"~^/main.aspx.*$" "/static/404";
-"~^/main.aspx.*$" "/static/404";
 "~^/main.jhtml.*$" "/static/404";
 "~^/main.jhtml.*$" "/static/404";
 "~^/main.jsa.*$" "/static/404";
@@ -25724,7 +25716,6 @@
 "~^/memberbio/.*$" "/static/404";
 "~^/mentions.*$" "/static/404";
 "~^/menu.asp.*$" "/static/404";
-"~^/menu.aspx.*$" "/static/404";
 "~^/menu.cfm.*$" "/static/404";
 "~^/menu.html.*$" "/static/404";
 "~^/menu.jhtml.*$" "/static/404";
@@ -26272,8 +26263,6 @@
 "~^/spog/welcome.*$" "/static/404";
 "~^/sponsors.*$" "/static/404";
 "~^/sports.*$" "/static/404";
-"~^/spy.aspx.*$" "/static/404";
-"~^/spy.aspxxd.phptmp/xd.php.*$" "/index";
 "~^/sql.*$" "/static/404";
 "~^/sr1/red.*$" "/static/404";
 "~^/src.bz2.*$" "/static/404";
@@ -27026,6 +27015,9 @@
 "~^/node.*$" "/static/404";
 "~^/gunmalove.com.*$" "/static/404";
 "~^/[a-z]+\?a=.*&c.*&callback=.*$" "/static/404";
+"~^/./core/themes/.*$" "/static/404";
+"~^/./core/modules/.*$" "/static/404";
+"~^/./core/misc/.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
