nginx: another stab at making gwern.net -> www.gwern.net
Important to fix because people are reading gwern.net pages but that leads to broken popups, among other issues.

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -8,47 +8,32 @@ map $request_uri $new_uri {
 }
 
 ## Rewrite https://gwern.net → https://www.gwern.net
-# server {
-#     listen 80;
-#     listen   [::]:80;
-#     # listen   443 default_server ssl;
+server{
+	#redirect non-www to www
+	listen 80;
+	listen 443 ssl;
+        server_name gwern.net;
 
-#     server_name gwern.net;
-
-
-#     ssl_certificate        /home/gwern/ssl/cloudflare.cert;
-#     ssl_certificate_key  /home/gwern/ssl/cloudflare.key;
-
-#     if ($scheme = http) {
-#        return 301 https://www.gwern.net$request_uri;
-#     }
-#     }
-server {
-    listen       80;
-    server_name  ~^(?<subdomain>.+)\.gwern\.net$;
-    return       301 http://www.gwern.net/$request_uri;
+        ssl_certificate /home/gwern/ssl/cloudflare.cert;
+        ssl_certificate_key /home/gwern/ssl/cloudflare.key;
+        return 301 https://www.$host$request_uri;
 }
 
 server {
-    listen 80 default_server;
-    listen   443 default_server ssl;
+     listen 80  default_server;
+     listen 443 default_server ssl;
 
-    server_name gwern.net;
-    server_name www.gwern.net;
+     server_name www.gwern.net;
 
-    ssl_certificate      /home/gwern/ssl/cloudflare.cert;
-    ssl_certificate_key  /home/gwern/ssl/cloudflare.key;
+     ssl_certificate      /home/gwern/ssl/cloudflare.cert;
+     ssl_certificate_key  /home/gwern/ssl/cloudflare.key;
 
-    # if ($scheme = http) {
-    #    return 301 https://www.gwern.net$request_uri;
-    # }
      root /home/gwern/gwern.net;
      index index;
 
      error_page 404 /static/404;
 
      default_type text/html;
-
 
      location / {
 
@@ -106,11 +91,9 @@ server {
         autoindex on;
 
         # server-side includes <https://en.wikipedia.org/wiki/Server_Side_Includes>:
-        # used in templating for the includes to avoid the need for full site rebuilds. Can just rsync up & expire cache.
+        ## used in templating for the includes to avoid the need for full site rebuilds. Can just rsync up & expire cache.
         ssi on; # http://nginx.org/en/docs/http/ngx_http_ssi_module.html
         ssi_last_modified on; # we are just doing simple transclusion, no dynamic funny business, so last-modified doesn't change
-
-
 
         # begin redirect rewrites: for cases where a more powerful regexp match-and-replace is required
 
