--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -6267,7 +6267,6 @@
 "~^/docs/fiction/The-Palace-of-Wonders$" "/fiction/The-Palace-of-Wonders";
 "~^/docs/Girl-Scouts-and-good-governance$" "/fiction/Girl-Scouts-and-good-governance";
 "~^/docs/Google-Alerts$" "/Google-Alerts";
-"~^/docs/haskell/Summer-of-Code$" "/haskell/Summer-of-Code";
 "~^/docs/haskell/Wikipedia-RSS-Archive-Bot$" "/haskell/Wikipedia-RSS-Archive-Bot";
 "~^/docs/Hunter$" "/Hunter";
 "~^/docs/In-Defense-Of-Inclusionism$" "/In-Defense-Of-Inclusionism";
@@ -6431,7 +6430,6 @@
 "~^/docs/Hafu$" "/Hafu";
 "~^/docs/haskell/Archiving-GitHub$" "/haskell/Archiving-GitHub";
 "~^/docs/haskell/Run-Length-Encoding$" "/haskell/Run-Length-Encoding";
-"~^/docs/haskell/Summer-of-Code$" "/haskell/Summer-of-Code";
 "~^/docs/haskell/Wikipedia-Archive-Bot$" "/haskell/Wikipedia-Archive-Bot";
 "~^/docs/haskell/Wikipedia-RSS-Archive-Bot$" "/haskell/Wikipedia-RSS-Archive-Bot";
 "~^/docs/hpmor$" "/hpmor";
@@ -11528,7 +11526,6 @@
 "~^/docs/rotten.com/library/conspiracy/jasons/fiction/Safecracker$" "/fiction/Safecracker";
 "~^/docs/rotten.com/library/conspiracy/jasons/fiction/The-Palace-of-Wonders$" "/fiction/The-Palace-of-Wonders";
 "~^/docs/rotten.com/library/conspiracy/jasons/GoodReads$" "/GoodReads";
-"~^/docs/rotten.com/library/conspiracy/jasons/haskell/Summer-of-Code$" "/haskell/Summer-of-Code";
 "~^/docs/rotten.com/library/conspiracy/jasons/Justifications$" "/Justifications";
 "~^/docs/rotten.com/library/conspiracy/jasons/Lewis-meditation$" "/Lewis-meditation";
 "~^/docs/rotten.com/library/conspiracy/jasons/Life-contract$" "/Life-contract";
@@ -12057,7 +12054,6 @@
 "~^/docs/sociology/fiction/The-Ones-Who-Walk-Towards-Acre$" "/fiction/The-Ones-Who-Walk-Towards-Acre";
 "~^/docs/sociology/fiction/The-Snowbanks-of-Time$" "/fiction/The-Snowbanks-of-Time";
 "~^/docs/sociology/haskell/Archiving-GitHub$" "/haskell/Archiving-GitHub";
-"~^/docs/sociology/haskell/Summer-of-Code$" "/haskell/Summer-of-Code";
 "~^/docs/sociology/haskell/Wikipedia-Archive-Bot$" "/haskell/Wikipedia-Archive-Bot";
 "~^/docs/sociology/haskell/Wikipedia-RSS-Archive-Bot$" "/haskell/Wikipedia-RSS-Archive-Bot";
 "~^/docs/sociology/hpmor$" "/hpmor";
@@ -12581,7 +12577,6 @@
 "~^/docs/www/Hafu$" "/Hafu";
 "~^/docs/www/haskell/Archiving-GitHub$" "/haskell/Archiving-GitHub";
 "~^/docs/www/haskell/Run-Length-Encoding$" "/haskell/Run-Length-Encoding";
-"~^/docs/www/haskell/Summer-of-Code$" "/haskell/Summer-of-Code";
 "~^/docs/www/haskell/Wikipedia-Archive-Bot$" "/haskell/Wikipedia-Archive-Bot";
 "~^/docs/www/haskell/Wikipedia-RSS-Archive-Bot$" "/haskell/Wikipedia-RSS-Archive-Bot";
 "~^/docs/www/hpmor$" "/hpmor";
@@ -13049,7 +13044,6 @@
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/fiction/The-Palace-of-Wonders$" "/fiction/The-Palace-of-Wonders";
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/fiction/The-Snowbanks-of-Time$" "/fiction/The-Snowbanks-of-Time";
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/haskell/Archiving-GitHub$" "/haskell/Archiving-GitHub";
-"~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/haskell/Summer-of-Code$" "/haskell/Summer-of-Code";
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/haskell/Wikipedia-Archive-Bot$" "/haskell/Wikipedia-Archive-Bot";
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/haskell/Wikipedia-RSS-Archive-Bot$" "/haskell/Wikipedia-RSS-Archive-Bot";
 "~^/docs/rotten.com/library/bio/crime/terrorists/dr-rashid/hpmor$" "/hpmor";
@@ -17320,7 +17314,6 @@
 "~^/docs/economics/1688-...vega-confusionofconfusions.pdf$" "/docs/economics/1688-delavega-confusionofconfusions.pdf";
 "~^/docs/eva/higuchi3.jpg$" "https://web.archive.org/web/20111104200603if_/http://img816.imageshack.us/img816/7936/higuchi3.jpg";
 "~^/docs/genetics/correlation/www.nature.com/reprints$" "https://www.nature.com/nature-research/reprints-and-permissions";
-"~^/docs/personal/index$" "/static/404";
 "~^/Ethical-sperm-donation/$" "/Ethical-sperm-donation";
 "~^/extensions/tex2jax\.js\?V\=2.7.1$" "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/extensions/tex2jax.js";
 "~^/.../genetics/heritable/2019-border.pdf$" "/docs/genetics/heritable/2019-border.pdf";
@@ -18158,7 +18151,7 @@
 "~^/tags/cs$" "/tags/CS";
 "~^/notes//images/notenkimemoirs/1983-gainax-daiconiv-openinganimation-hdcomplete.mp4$" "/images/notenkimemoirs/1983-gainax-daiconiv-openinganimation-hdcomplete.mp4";
 "~^/notes//images/notenkimemoirs/1981-gainax-daiconiii-openinganimation-remasteredaudiovideo.mp4$" "/images/notenkimemoirs/1981-gainax-daiconiii-openinganimation-remasteredaudiovideo.mp4";
-"~^/manga-okada.html$" "http://web.archive.org/web/20080504115212/www.mit.edu/people/rei/manga-okada.html";
+"~^/manga-okada.html$" "https://web.archive.org/web/20080504115212/www.mit.edu/people/rei/manga-okada.html";
 "~^/hutp:./eva.onegeek.org/piqermail/oldeva/1997-October/006527.html$" "http://eva.onegeek.org/piqermail/oldeva/1997-October/006527.html";
 "~^/httq://forum.evageeks.org/viewtopic/php?p=403905$" "http://forum.evageeks.org/viewtopic/php?p=403905";
 "~^/docs/rotten.com/library/imagery/propaganda/racist$" "/docs/rotten.com/library/imagery/propaganda/racist-propaganda/index.html";
@@ -18168,7 +18161,7 @@
 "~^/docs/ai/1962Video$" "/docs/ai/index";
 "~^/danbooru2018/metadata" "/Danbooru2018#metadata";
 "~^/haskyll/Run-Length-Encoding$" "/haskell/Run-Length-Encoding";
-"~^/file425.html.*" "http://web.archive.org/web/20071207235755/www.geocities.com/Tokyo/4081/file425.html#3";
+"~^/file425.html.*" "https://web.archive.org/web/20071207235755/www.geocities.com/Tokyo/4081/file425.html#3";
 "~^/Silk-Road\&rut.*$" "/Silk-Road";
 "~^/gpt-3$" "/GPT-3";
 "~^/tags/popular$" "/index#popular";
@@ -20468,7 +20461,6 @@
 "~^/docs/psychology/docs/culture/1963-asimov.*$" "/docs/culture/1963-asimov";
 "~^/docs/psychology/fiction/The-Mulberry-Tree.*$" "/fiction/The-Mulberry-Tree";
 "~^/docs/rotten.*/Death-Note-Ending.*$" "/Death-Note-Ending";
-"~^/docs/rotten.*/haskell/Summer-of-Code.*$" "/haskell/Summer-of-Code";
 "~^/docs/rotten.*/Clone.*$" "/Clone";
 "~^/docs/rotten.*/DNB-meta-analysis.*$" "/DNB-meta-analysis";
 "~^/docs/rotten.*/Simulation-inferences.*$" "/Simulation-inferences";
@@ -20745,7 +20737,6 @@
 "~^/docs/s.*/Story-Of-Your-Life.*$" "/Story-Of-Your-Life";
 "~^/docs/s.*/Wikipedia-and-YouTube.*$" "/Wikipedia-and-YouTube";
 "~^/docs/s.*/docs/sr/2013-power.*$" "/docs/sr/2013-power";
-"~^/docs/statistics/haskell/Summer-of-Code.*$" "/haskell/Summer-of-Code";
 "~^/static/img/logo.png.*$" "/static/img/logo/logo.png";
 "~^/static/img/theguardian.svg.*$" "/static/img/icons/theguardian.svg";
 "~^/static/img/thenewyorker.svg.*$" "/static/img/icons/thenewyorker.svg";
@@ -20866,7 +20857,7 @@
 "~^/docs/borges/1933-borges-theartofverbalabuse.pdf😋.*$" "/docs/borges/1933-borges-theartofverbalabuse.pdf";
 "~^/docs/science/%EF.*$" "/docs/science/index";
 "~^/docs/science/%01.*$" "/docs/science/index";
-"~^/docs/l.*/Summer-of-Code.*$" "/haskell/Summer-of-Code";
+"~^/docs/[a-km-z].*/Summer-of-Code.*$" "/haskell/Summer-of-Code";
 "~^/docs/ai/2021-jouppi$" "/docs/ai/2021-jouppi.pdf";
 "~^/docs/ai/2021-jouppi.PDT.*$" "/docs/ai/2021-jouppi.pdf";
 "~^/docs/statistics/decision/benter.*$" "/docs/statistics/decision/1994-benter.pdf";
@@ -22864,6 +22855,57 @@
 "~^/feed:https://www.links.org/?feed=comments-rss2.*$" "https://feeds.feedburner.com/links/ZvUZ";
 "~^/docs/www/www.justice.gov/917278af2c65395879bcb9c6a1b59375ed7a3d2b.htmlhttps://www.gwern.net/docs/silk-road/2015-01-29-jasencrisp-defensesentencingletter.pdf.*$" "/docs/silk-road/2015-01-29-jasencrisp-defensesentencingletter.pdf";
 "~^/docs/[a-km-z]/Scanners$" "/Scanners";
+"~^/docs/rotten.com/library/crime/criminals/darlie-routier$" "/docs/rotten.com/library/bio/crime/criminals/darlie-routier/index.html";
+"~^/.*route=product/search.*modafinil.*$" "/Modafinil";
+"~^/DNM-archivesx0.*$" "/DNM-archives";
+"~^/DNM-survivalif.*$" "/DNM-survival";
+"~^/Screwflyfavicon.*$" "/Screwfly";
+"~^/docs/[a-k][m-z].*/The-Melancholy-of-Kyon.*$" "/The-Melancholy-of-Kyon";
+"~^/docs/link-bibliography/archiving-urls.*$" "/docs/link-bibliography/Archiving-URLs";
+"~^/docs/link-bibliography/computers.*$" "/docs/link-bibliography/Computers";
+"~^/docs/link-bibliography/reviews/umineko.*$" "/docs/link-bibliography/reviews/Umineko";
+"~^/docs/link-bibliography/zeo/potassium.*$" "/docs/link-bibliography/zeo/Potassium";
+"~^/https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.330.1871&rep=rep1&type=pdf.*$" "https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.330.1871&rep=rep1&type=pdf";
+"~^/https://en.wikipedia.org/w/index.php?title=Polymorphism_(materials_science)&oldid=999770848.*$" "https://en.wikipedia.org/w/index.php?title=Polymorphism_(materials_science)&oldid=999770848";
+"~^/https://nitter.hu/search-advanced?lang=en.*$" "https://nitter.hu/search-advanced?lang=en";
+"~^/https://nitter.hu/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd.*$" "https://nitter.hu/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd";
+"~^/https://wiki.archiveteam.org/index.php?title=ArchiveBot.*$" "https://wiki.archiveteam.org/index.php?title=ArchiveBot";
+"~^/images/zeo/2012-vitamind-morning-daymo-od.png.*$" "/images/zeo/2012-vitamind-morning-daymood.png";
+"~^/images/zeo/2012-vitamind-morning-morn-ingfeel.png.*$" "/images/zeo/2012-vitamind-morning-morningfeel.png";
+"~^/media.wired.com/photos/5ab2deda5d79c76b98749dea/master/w_640,c_limit/moxiebatter.jpg.*$" "http://media.wired.com/photos/5ab2deda5d79c76b98749dea/master/w_640,c_limit/moxiebatter.jpg";
+"~^/metal-fabrication-stamping.com.*$" "/static/404";
+"~^/reviews/Timing.*$" "/Timing";
+"~^/reviews/mlp.page.*$" "/reviews/MLP.page";
+"~^/static/font/drop-cap/Cheshire-Initials-O.ttf.*$" "/static/font/drop-cap/cheshire/Cheshire-Initials-O.ttf";
+"~^/docs/psychology/neuroscience/favicon.ico.*$" "/static/img/favicon.ico";
+"~^/reinforcement-learning/chess/index.*$" "/docs/reinforcement-learning/chess/index";
+"~^/psychology/chess/index.*$" "/docs/psychology/chess/index";
+"~^/directories$" "/docs/index";
+"~^/docs/personal/2011-gwern-yourmorals.org/schwartz_process.php*$" "/docs/personal/2011-gwern-yourmorals.org/schwartz_process.html";
+"~^/docs/personal/2011-gwern-yourmorals.org/schwartz...php$" "/docs/personal/2011-gwern-yourmorals.org/schwartz_process.html";
+"~^/generator$" "/index";
+"~^/GPT-^3$" "/GPT-3";
+"~^/GPT-%5E3.*$" "/GPT-3";
+"~^/nft$" "/CO2-Coin";
+"~^/docs/[a-km-z]/Blackmail.*$" "/Blackmail";
+"~^/default.jhtml.*$" "/index";
+"~^/notes/killing-rabbits.*$" "/notes/Killing-Rabbits";
+"~^/static/extracts-annotations.js.*$" "/static/js/extracts-annotations.js";
+"~^/psychology/chess/index.*$" "/docs/psychology/chess/index";
+"~^/static/js/links.js.*$" "/static/js/old/links.js";
+"~^/Sitemap.txt.*$" "/sitemap.xml";
+"~^/.*prebidjs.*$" "/static/js/old/links.js";
+"~^/static/font/drop-cap/DeutscheZierschrift-Q.ttf.*$" "/static/font/drop-cap/de-zs/DeutscheZierschrift-Q.ttf";
+"~^/images%2Fdesign%2F2020-02-06-gwern.net-subscripts-examples.png.*$" "/images/design/2020-02-06-gwernnet-subscripts-examples.png";
+"~^/.http://neomarxisme.com/wdmwordpress/?p=88.*$" "http://neomarxisme.com/";
+"~^http://us.vansto.net/verify.txt.*$" "http://us.vansto.net/verify.txt";
+"~^/fiction/Clippy/$" "/fiction/Clippy";
+"~^/Fake-Journal-Club/$" "/Fake-Journal-Club";
+"~^/docs/link-bibliography/embryo-editing.*$" "/docs/link-bibliography/Embryo-editing";
+"~^/docs/existential-risk/2011-05-10-gi$" "/docs/existential-risk/2011-05-10-givewell-holdenkarnofskyjaantallinn.doc";
+"~^/docs/psychology/1941-cleckley-maskofsanity.pdf,.*$" "/docs/psychology/1941-cleckley-maskofsanity.pdf";
+"~^/Danbooru20--19.*$" "/Danbooru2019";
+"~^/.*le1990-10_media\(21\)_q5w4.htm.*$" "http://www.silcom.com/~barnowl/chain-letter/archive/le1990-10_media%2821%29_q5w4.htm";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -23132,8 +23174,7 @@
 "~^//uploads/.*$" "/static/404";
 "~^//utility/.*$" "/static/404";
 "~^//v1/.*$" "/static/404";
-"~^//vendor/phpunit/phpunit/build\.xml.*$" "/static/404";
-"~^//vendor/phpunit/phpunit/phpunit.xml$" "/static/404";
+"~^/.*phpunit.*$" "/static/404";
 "~^//wapshop/.*$" "/static/404";
 "~^//web/.*$" "/static/404";
 "~^//webcms/public$" "/static/404";
@@ -25953,7 +25994,6 @@
 "~^/phppgadmin//.*$" "/static/404";
 "~^/phppma/.*$" "/static/404";
 "~^/phprov/.*$" "/static/404";
-"~^/phpunit/.*$" "/static/404";
 "~^/phpweb96/.*$" "/static/404";
 "~^/phytocetcbdoil.com.*$" "/static/404";
 "~^/pixel.*$" "/static/404";
@@ -26602,9 +26642,6 @@
 "~^/vendor/.*$" "/static/404";
 "~^/vendor/.*$" "/static/404";
 "~^/vendor/.*$" "/static/404";
-"~^/vendor/phpunit/phpunit/src/Util/PHP/eval-stdin.php.*$" "/static/404";
-"~^/vendor/phpunit/phpunit/src/Util/PHP/eval-stdin.php.*$" "/static/404";
-"~^/vendor/phpunit/phpunit/src/Util/PHP/eval-stdin.php.*$" "/static/404";
 "~^/vendors_.*$" "/static/404";
 "~^/vensdor/.*$" "/static/404";
 "~^/version.js.*$" "/static/404";
@@ -27018,6 +27055,23 @@
 "~^/./core/themes/.*$" "/static/404";
 "~^/./core/modules/.*$" "/static/404";
 "~^/./core/misc/.*$" "/static/404";
+"~^/static/js/analytics.js.*$" "/static/404";
+"~^/static/js/\$\{referenceData\.element\.dataset\.urlOriginal.*$" "/static/404";
+"~^/:postSlug.*$" "/static/404";
+"~^/mmam8u.*$" "/static/404";
+"~^/laravel.*$" "/static/404";
+"~^/fettesmerci.de.*$" "/static/404";
+"~^/e9umru.*$" "/static/404";
+"~^/ckfc.*$" "/static/404";
+"~^/callto.*$" "/static/404";
+"~^/Anonime-shell.*$" "/static/404";
+"~^/csl-v10.0.4.wasm.*$" "/static/404";
+"~^/ReportServer.*$" "/static/404";
+"~^/.*callback=.*&from=.*&m=.*&mod.*$" "/static/404";
+"~^/menu.jsp.*$" "/static/404";
+"~^/licence.wdphp.*$" "/static/404";
+"~^/.*phpmyadmin.*$" "/static/404";
+"~^/base.cfm.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
