--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3420,3 +3420,7 @@ default "";
 "~^/docs/cs/2020-thyagarajan.pdf.*$" "/docs/cs/cryptography/2020-thyagarajan.pdf";
 "~^/Clippy.page.*$" "/fiction/Clippy.page";
 "~^/Clippy.*$" "/fiction/Clippy";
+"~^/docs/reinforcement-learning/2020-won.pdf.*$" "/docs/reinforcement-learning/robot/2020-won.pdf";
+"~^/docs/economics/2021-gunadi.pdf.*$" "/docs/economics/automation/2021-gunadi.pdf";
+"~^/docs/reinforcement-learning/2021-foehn.pdf.*$" "/docs/reinforcement-learning/robot/2021-foehn.pdf";
+"~^/docs/psychology/2014-hambrick.pdf.*$" "/docs/psychology/chess/2014-hambrick.pdf";
