--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -22906,6 +22906,17 @@
 "~^/docs/psychology/1941-cleckley-maskofsanity.pdf,.*$" "/docs/psychology/1941-cleckley-maskofsanity.pdf";
 "~^/Danbooru20--19.*$" "/Danbooru2019";
 "~^/.*le1990-10_media\(21\)_q5w4.htm.*$" "http://www.silcom.com/~barnowl/chain-letter/archive/le1990-10_media%2821%29_q5w4.htm";
+"~^/.*le2000-12_novena_q4d2_ca.htm.*$" "http://www.silcom.com/~barnowl/chain-letter/archive/le2000-12_novena_q4d2_ca.htm";
+"~^/images/gpt/2020-kaplan-figure7-rnnsvstransformers.png.*$" "/images/ai/gpt/2020-kaplan-figure7-rnnsvstransformers.png";
+"~^/images/gpt/2020-kaplan-figure7-rnnsvstransformers$" "/images/ai/gpt/2020-kaplan-figure7-rnnsvstransformers.png";
+"~^/notes/Attentio$" "/notes/Attention";
+"~^/images/gpt/$" "/docs/ai/gpt/index";
+"~^/static/img/deepmind.svg.*$" "/static/img/icons/deepmind.svg";
+"~^/watchmen$" "https://en.wikipedia.org/wiki/Watchmen";
+"~^/docs/psychede$" "/docs/psychedelic/index";
+"~^/docs/radiance/2002-scholz-radiance.djvu.*$" "/docs/radiance/2002-scholz-radiance.pdf";
+"~^/docs/link-bibliography/reviews/tea.*$" "/docs/link-bibliography/reviews/Tea";
+"~^/docs/link-bibliography/reviews/cultural-revolution.*$" "/docs/link-bibliography/reviews/Cultural-Revolution";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -27072,6 +27083,7 @@
 "~^/licence.wdphp.*$" "/static/404";
 "~^/.*phpmyadmin.*$" "/static/404";
 "~^/base.cfm.*$" "/static/404";
+"~^/db_gwern.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
