--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3424,3 +3424,17 @@ default "";
 "~^/docs/economics/2021-gunadi.pdf.*$" "/docs/economics/automation/2021-gunadi.pdf";
 "~^/docs/reinforcement-learning/2021-foehn.pdf.*$" "/docs/reinforcement-learning/robot/2021-foehn.pdf";
 "~^/docs/psychology/2014-hambrick.pdf.*$" "/docs/psychology/chess/2014-hambrick.pdf";
+"~^/docs/ai/2020-kreps.pdf.*$" "/docs/ai/gpt/2020-kreps.pdf";
+"~^/docs/ai/1990-schmidhuber.pdf.*$" "/docs/ai/rnn/1990-schmidhuber.pdf";
+"~^/docs/ai/1991-hochreiter.pdf.*$" "/docs/ai/rnn/1991-hochreiter.pdf";
+"~^/docs/ai/1991-schmidhuber.pdf.*$" "/docs/ai/rnn/1991-schmidhuber.pdf";
+"~^/docs/ai/1993-cortes.pdf.*$" "/docs/ai/scaling/1993-cortes.pdf";
+"~^/docs/ai/1990-elman.pdf.*$" "/docs/ai/rnn/1990-elman.pdf";
+"~^/docs/cs/2000-mao.pdf.*$" "/docs/cs/cryptography/2000-mao.pdf";
+"~^/docs/ai/2018-haenssle.pdf.*$" "/docs/ai/nn/2018-haenssle.pdf";
+"~^/docs/cs/1955-nash-typeset.pdf.*$" "/docs/cs/cryptography/1955-nash-typeset.pdf";
+"~^/docs/cs/1955-nash.page.*$" "/docs/cs/cryptography/1955-nash.page";
+"~^/docs/cs/1955-nash-nsacryptography.pdf.*$" "/docs/cs/cryptography/1955-nash-nsacryptography.pdf";
+"~^/docs/statistics/1957-feller-anintroductiontoprobabilitytheoryanditsapplications.pdf.*$" "/docs/statistics/probability/1957-feller-anintroductiontoprobabilitytheoryanditsapplications.pdf";
+"~^/docs/statistics/1973-meshalkin-collectionofproblemsinprobabilitytheory.pdf.*$" "/docs/statistics/probability/1973-meshalkin-collectionofproblemsinprobabilitytheory.pdf";
+"~^/docs/statistics/1932-hotelling.pdf.*$" "/docs/statistics/probability/1932-hotelling.pdf";
